# dental

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.gateway  Dockerfile.server  README.md  docker-compose.yml  init-db.sh
crates/dental-common/: Cargo.toml
crates/dental-common/src/: lib.rs
crates/dental-core/: Cargo.toml
crates/dental-core/src/: lib.rs
crates/dental-db/: Cargo.toml
crates/dental-db/src/: audit.rs  auth.rs  billing.rs  clinical.rs  front_office.rs  lib.rs  shared.rs  treatment.rs
crates/dental-frontend/: Cargo.toml
crates/dental-frontend/src/: lib.rs
crates/dental-gateway/: CLAUDE.md  Cargo.toml  build.rs
crates/dental-gateway/src/: main.rs  routes.rs
crates/dental-server/: Cargo.toml
crates/dental-server/src/: main.rs
migrations/: 000_bootstrap_schemas.sql  001_auth_tables.sql  002_shared_tables.sql  003_front_office_tables.sql  004_clinical_tables.sql  005_treatment_tables.sql  006_billing_tables.sql  007_audit_tables.sql  008_cross_schema_grants.sql
prompts/main-2026-02-15/: main-ai-2026-02-15-1.md  main-ai-2026-02-15-2.md  mvp.md
prompts/milestone-0/: milestone-0-chief-architect-concise.md  milestone-0-chief-architect-finalized.md  milestone-0-chief-architect.md  milestone-0.md
prompts/mvp/: main-ai-2026-02-15-3.md
prompts/open-api-gateway-2026-02-19/: open-api-gateway-ai-2026-02-19-1  open-api-gateway-ai-2026-02-19-2  open-api-gateway-ai-2026-02-19-3
prompts/product_manager/: product_manager.md
proto/: dental.proto
