[package]
name = "dental-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
dental-common = { path = "../dental-common" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
