[package]
name = "dental-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
dental-common = { path = "../dental-common" }
axum = "0.8"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
