[package]
name = "dental-server"
version = "0.1.0"
edition = "2021"

[dependencies]
dental-common = { path = "../dental-common" }
dental-core = { path = "../dental-core" }
dental-db = { path = "../dental-db" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
