[package]
name = "dental-server"
version = "0.1.0"
edition = "2021"

[dependencies]
dental-common = { path = "../dental-common" }
dental-core = { path = "../dental-core" }
dental-db = { path = "../dental-db" }
tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
dotenvy = "0.15"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
